--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -48,7 +48,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
 
@@ -77,8 +77,14 @@
         <div class="container">
             <a href="#"><img class="container__imagem container__imagem-transparente" src="./assets/img/Favoritos.svg"
                     alt="Meus Favoritos"></a>
-            <a href="#"><img class="container__imagem" src="./assets/img/Compras.svg" alt="Carrinhos de Compras"></a>
-            <a href="#"><img class="container__imagem" src="./assets/img/Usuário.svg" alt="Meu perfil"></a>
+            <a href="#" class="container__link"><img class="container__imagem" src="./assets/img/Compras.svg"
+                    alt="Carrinhos de Compras">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link"><img class="container__imagem" src="./assets/img/Usuário.svg"
+                    alt="Meu perfil">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -89,101 +95,111 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/img/ApacheKafka.png"
-                        alt="Livro sobre apache kafka e spring boot da alurabooks"></div>
-                <div class="swiper-slide"><img src="./assets/img/Liderança.png"
-                        alt="Livro sobre Liderança em design da alurabooks"></div>
-                <div class="swiper-slide"><img src="./assets/img/Javascript.png"
-                        alt="Livro sobre Javascript assertivo da alurabooks"></div>
-                <div class="swiper-slide"><img src="./assets/img/Guia Front-end.png"
-                        alt="Livro de um guia de estudos no frontend"></div>
-                <div class="swiper-slide"><img src="./assets/img/Portugol.png" alt="Livro sobre Portugol"></div>
-                <div class="swiper-slide"><img src="./assets/img/Nodejs.png" alt="Livro sobre Nodejs"></div>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./assets/img/ApacheKafka.png"
+                            alt="Livro sobre apache kafka e spring boot da alurabooks"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Liderança.png"
+                            alt="Livro sobre Liderança em design da alurabooks"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Javascript.png"
+                            alt="Livro sobre Javascript assertivo da alurabooks"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Guia Front-end.png"
+                            alt="Livro de um guia de estudos no frontend"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Portugol.png" alt="Livro sobre Portugol"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Nodejs.png" alt="Livro sobre Nodejs"></div>
 
-            </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
                 </div>
-                <img class="descricao__imagem" src="./assets/img/Angular.png" alt="Livro sobre Angular 11">
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="./assets/img/Compras.svg" alt="Adicionar ao carrinho"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
+                    </div>
+                    <img class="descricao__imagem" src="./assets/img/Angular.png" alt="Livro sobre Angular 11">
+                </div>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./assets/img/Compras.svg" alt="Adicionar ao carrinho"></li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
 
         <h2 class="carrossel__titulo">Mais vendidos</h2>
         <!-- Slider main container -->
+        <div class="carrossel__container">
         <div class="swiper">
             <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="./assets/img/Nodejs.png" alt="Livro sobre Nodejs"></div>
-                <div class="swiper-slide"><img src="./assets/img/Portugol.png" alt="Livro sobre Portugol"></div>
-                <div class="swiper-slide"><img src="./assets/img/Guia Front-end.png"
-                        alt="Livro de um guia de estudos no frontend"></div>
-                <div class="swiper-slide"><img src="./assets/img/ApacheKafka.png"
-                        alt="Livro sobre apache kafka e spring boot da alurabooks"></div>
-                <div class="swiper-slide"><img src="./assets/img/Liderança.png"
-                        alt="Livro sobre Liderança em design da alurabooks"></div>
-                <div class="swiper-slide"><img src="./assets/img/Javascript.png"
-                        alt="Livro sobre Javascript assertivo da alurabooks"></div>
+           
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="./assets/img/Nodejs.png" alt="Livro sobre Nodejs"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Portugol.png" alt="Livro sobre Portugol"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Guia Front-end.png"
+                            alt="Livro de um guia de estudos no frontend"></div>
+                    <div class="swiper-slide"><img src="./assets/img/ApacheKafka.png"
+                            alt="Livro sobre apache kafka e spring boot da alurabooks"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Liderança.png"
+                            alt="Livro sobre Liderança em design da alurabooks"></div>
+                    <div class="swiper-slide"><img src="./assets/img/Javascript.png"
+                            alt="Livro sobre Javascript assertivo da alurabooks"></div>
 
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
 
-            </div>
-        </div>
-
-        <div class="card">
-            <!-- 1º linha -->
-            <div class="card__descricao">
-                <!-- 1º coluna -->
-                <div class="descricao">
-                    <img src="./assets/img/Estrelinhas.png" alt="Avaliação 5 estrelas">
-                    <h3 class="descricao__titulo">Autora do Mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
                 </div>
-                <!-- 2º coluna -->
-                <img src="./assets/img/Perfil-escritora 1-1.png" class="descricao__imagem">
             </div>
 
-            <!-- 2º linha -->
-            <div class="card__botoes">
-                <!-- 1º coluna -->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/img/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="./assets/img/Compras.svg" alt="Adicionar no carrinho de compras">
-                    </li>
-                </ul>
-                <!-- 2º coluna -->
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <!-- 1º coluna -->
+                    <div class="descricao">
+                        <img src="./assets/img/Estrelinhas.png" alt="Avaliação 5 estrelas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <!-- 2º coluna -->
+                    <img src="./assets/img/Perfil-escritora 1-1.png" class="descricao__imagem">
+                </div>
+
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <!-- 1º coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="./assets/img/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="./assets/img/Compras.svg"
+                                alt="Adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <!-- 2º coluna -->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
+
+
     <section class="topico">
         <h2 class="topico__titulo">Tópicos visitados recentemente</h2>
         <ul class="topico__lista">
@@ -270,35 +286,35 @@
         </ul>
 
         <ul class="lista-rodape">
-                <li class="lista-rodape__titulo">Comunidade</li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/HipstersTech.png" alt="Logo da Hipster Ponto Tech">
-                    <a href="#" class="lista-rodape__link">Hipster Ponto Tech</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/Scuba.png" alt="Logo da Scuba Dev">
-                    <a href="#" class="lista-rodape__link">Scuba Dev</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/Layers.png" alt="Logo da Layers Ponto Tech">
-                    <a href="#" class="lista-rodape__link">Layers Ponto Tech</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/LikeABoss.png" alt="Logo da Like a Boss">
-                    <a href="#" class="lista-rodape__link">Like a Boss</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/CarreiraSemFronteira.png" alt="Logo da Carreiras sem Fronteiras">
-                    <a href="#" class="lista-rodape__link">Carreiras sem Fronteiras</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/HipstersJobs.png" alt="Logo da Hipster Ponto Jobs">
-                    <a href="#" class="lista-rodape__link">Hipster Ponto Jobs</a>
-                </li>
-                <li class="lista-rodape__item">
-                    <img src="./assets/img/GUJ.png" alt="Logo da GUJ">
-                    <a href="#" class="lista-rodape__link">GUJ</a>
-                </li>
+            <li class="lista-rodape__titulo">Comunidade</li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/HipstersTech.png" alt="Logo da Hipster Ponto Tech">
+                <a href="#" class="lista-rodape__link">Hipster Ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/Scuba.png" alt="Logo da Scuba Dev">
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/Layers.png" alt="Logo da Layers Ponto Tech">
+                <a href="#" class="lista-rodape__link">Layers Ponto Tech</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/LikeABoss.png" alt="Logo da Like a Boss">
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/CarreiraSemFronteira.png" alt="Logo da Carreiras sem Fronteiras">
+                <a href="#" class="lista-rodape__link">Carreiras sem Fronteiras</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/HipstersJobs.png" alt="Logo da Hipster Ponto Jobs">
+                <a href="#" class="lista-rodape__link">Hipster Ponto Jobs</a>
+            </li>
+            <li class="lista-rodape__item">
+                <img src="./assets/img/GUJ.png" alt="Logo da GUJ">
+                <a href="#" class="lista-rodape__link">GUJ</a>
+            </li>
         </ul>
     </footer>
 
