Criando a pagina de cadastro

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </ul>
 
         <div class="container">
+            <a href="./cadastro.html" class="btn-cadastro">Cadastro</a>
             <a href="#"><img class="container__imagem container__imagem-transparente" src="./assets/img/Favoritos.svg"
                     alt="Meus Favoritos"></a>
             <a href="#" class="container__link"><img class="container__imagem" src="./assets/img/Compras.svg"
