--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Josefin+Sans:wght@400;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
 </head>
 
 <body>
@@ -43,7 +44,7 @@
                 </li>
             </ul>
             <img class="container__imagem" src="./assets/img/Logo.svg" alt="Logo da AluraBooks">
-            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+            <a class="link-logo" href="./index.html"> <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1></a>
         </div>
 
         <ul class="opcoes">
@@ -71,14 +72,14 @@
             </ul>
 
             <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
-            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+            <li class="opcoes__item"><a href="./loja.html" class="opcoes__link">Minha estante</a></li>
         </ul>
 
         <div class="container">
             <a href="./cadastro.html" class="btn-cadastro">Cadastro</a>
             <a href="#"><img class="container__imagem container__imagem-transparente" src="./assets/img/Favoritos.svg"
                     alt="Meus Favoritos"></a>
-            <a href="#" class="container__link"><img class="container__imagem" src="./assets/img/Compras.svg"
+            <a href="./loja.html" class="container__link"><img class="container__imagem" src="./assets/img/Compras.svg"
                     alt="Carrinhos de Compras">
                 <p class="container__texto">Minha Sacola</p>
             </a>
